--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@ Deny from all
 	Allow from all
 </Files>
 
-<Files discord-integration.php>
+<Files discord-interaction.php>
 	Allow from all
 </Files>
